--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Kanit:wght@600&family=Mooli&family=Quicksand:wght@700&family=Roboto:ital,wght@1,100&display=swap');
+
+
+*{
+    background-color: rgb(247, 247, 247);
+    font-family: 'Mooli', sans-serif;
+}
+.textheader{
+    color:rgb(251, 80, 37); 
+    font-size: 30px;
+}
+.h{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 80px 20px 80px;
+    margin: 15px 80px 20px 80px;
+}
+.img{
+    max-width: 500px;
+}
+.texto{
+    align-items: center;
+    font-size: 1.4rem;
+}
+
+h1{
+    font-size: 50px;
+    line-height: 10px;
+}
+a{
+    color:rgb(251, 80, 37); 
+}
+p{
+    color:gray;
+    font-size: 15px;
+    line-height: 8px;
+}
+.div1{
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    display:flex;
+    justify-content: center;
+
+}
+
 .footer{
     padding: 20px;
     margin: 10px;
