--- a/src/index.css
+++ b/src/index.css
@@ -70,37 +70,40 @@ button {
 /* #endregion */
 
 /* #region: container */
+
+/* ! ajeitar responsividade */
+
 .container {
-    padding: 0;
-    margin: 0 15em;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.texto {
-    align-items: center;
-    font-size: 1.4rem;
-}
-
-h1 {
-    font-size: 50px;
-    line-height: 10px;
-}
-
-span {
-    color: rgb(251, 80, 37);
-}
-
-p {
-    color: gray;
-    font-size: 15px;
-    line-height: 8px;
+    margin: 0 5em 0 14em;
+    /* flex-direction: row; */
+    /* align-items: center; */
+    /* justify-content: space-around; */
 }
 
 .main-img {
     max-width: 700px;
-}    
+}   
+
+.text {
+    flex-direction: column;
+}
+
+.headline {
+    font-size: 4em;
+    margin-bottom: -50px;
+}
+
+
+.subheadline {
+    color: gray;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.headline span {
+    color: rgb(251, 80, 37);
+}
 /* #endregion */
 
 /* #region: search-menu */
