--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Kanit:wght@600&family=Mooli&family=Quicksand:wght@700&family=Roboto:ital,wght@1,100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Kanit:wght@600&family=Mooli&family=Quicksand:wght@700&family=Roboto:ital,wght@1,100&display=swap");
 
 /* #region: whole file */
 * {
-    background-color: rgb(247, 247, 247);
-    font-family: 'Mooli', sans-serif;
+  background-color: rgb(247, 247, 247);
+  font-family: "Mooli", sans-serif;
 }
 
 /* #endregion */
 
 /* #region: header */
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 80px 20px 80px;
-    margin: 15px 80px 20px 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 80px 20px 80px;
+  margin: 15px 80px 20px 80px;
 }
 
 .headertext {
-    color: rgb(251, 80, 37);
-    font-size: 30px;
+  color: rgb(251, 80, 37);
+  font-size: 30px;
 }
 
 button {
-    border-radius: 12px;
-    height: 40px;
-    width: 90px;
-    font-weight: bold;
+  border-radius: 12px;
+  height: 40px;
+  width: 90px;
+  font-weight: bold;
 }
 
 .login {
-    background-color: white;
-    color: black;
-    border-color: black;
+  background-color: white;
+  color: black;
+  border-color: black;
 }
 
 .register,
 .tracking {
-    background-color: rgb(251, 80, 37);
-    color: white;
-    border: none;
+  background-color: rgb(251, 80, 37);
+  color: white;
+  border: none;
 }
 
 .login:hover {
-    background-color: rgb(231, 231, 231);
-    transform: scale(1.03);
-    cursor: pointer;
+  background-color: rgb(231, 231, 231);
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
 .register:hover,
 .tracking:hover {
-    background-color: rgb(253, 140, 41);
-    transform: scale(1.03);
-    cursor: pointer;
+  background-color: rgb(253, 140, 41);
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
 .menu {
-    display: flex;
-    font-size: 13px;
-    justify-content: space-between;
-    font-weight: bold;
+  display: flex;
+  font-size: 13px;
+  justify-content: space-between;
+  font-weight: bold;
 }
 
 .menuh:hover {
-    color: rgb(157, 157, 157);
-    cursor: pointer;
+  color: rgb(157, 157, 157);
+  cursor: pointer;
 }
 
 /* #endregion */
@@ -74,96 +74,159 @@ button {
 /* ! ajeitar responsividade */
 
 .container {
-    display: flex;
-    margin: 0 5em 0 14em;
-    /* flex-direction: row; */
-    /* align-items: center; */
-    /* justify-content: space-around; */
+  display: flex;
+  margin: 0 5em 0 14em;
+  /* flex-direction: row; */
+  /* align-items: center; */
+  /* justify-content: space-around; */
 }
 
 .main-img {
-    max-width: 700px;
-}   
+  max-width: 700px;
+}
 
 .text {
-    flex-direction: column;
+  flex-direction: column;
 }
 
-.headline {
+/*.headline {
     font-size: 4em;
     margin-bottom: -50px;
-}
-
+}*/
 
 .subheadline {
-    color: gray;
-    font-size: 20px;
-    line-height: 30px;
+  color: gray;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .headline span {
-    color: rgb(251, 80, 37);
+  color: rgb(251, 80, 37);
 }
 /* #endregion */
 
 /* #region: search-menu */
 .search-menu {
-    padding: 20px;
-    margin: 10px;
-    align-items: center;
-    display: flex;
-    justify-content: center;
+  padding: 20px;
+  margin: 10px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
-input[type='register'],
-input[type='origin'],
-input[type='destination'],
-input[type='weight'] {
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    cursor: pointer;
+input[type="register"],
+input[type="origin"],
+input[type="destination"],
+input[type="weight"] {
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .srazul {
-    font-size: 15px;
-    background-color: rgb(0, 0, 67);
+  font-size: 15px;
+  background-color: rgb(0, 0, 67);
 }
 
 .srlar {
-    font-size: 15px;
-    background-color: orangered;
+  font-size: 15px;
+  background-color: orangered;
 }
 
 .laranja {
-    background-color: orangered;
-    color: white;
-    padding: 20px;
-    border-radius: 0 20px 20px 0;
+  background-color: orangered;
+  color: white;
+  padding: 20px;
+  border-radius: 0 20px 20px 0;
 }
 
 .azul {
-    background-color: rgb(0, 0, 67);
-    color: gainsboro;
-    padding: 20px;
-    border-radius: 20px 0 0 20px;
+  background-color: rgb(0, 0, 67);
+  color: gainsboro;
+  padding: 20px;
+  border-radius: 20px 0 0 20px;
 }
 
 .check {
-    background-color: rgb(0, 0, 67);
-    color: white;
-    border-radius: 12px;
-    height: 40px;
-    width: 90px;
-    font-weight: bold;
-    border: none;
+  background-color: rgb(0, 0, 67);
+  color: white;
+  border-radius: 12px;
+  height: 40px;
+  width: 90px;
+  font-weight: bold;
+  border: none;
 }
 
 .check:hover {
-    background-color: rgb(12, 12, 158);
-    transform: scale(1.03);
-    cursor: pointer;
+  background-color: rgb(12, 12, 158);
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
 /* #endregion */
+
+/*---------------FORMULÁRIOS------------------ */
+
+.oculto {
+  display: none;
+}
+
+.form-container form {
+  width: 400px;
+  min-height: 400px;
+  background: rgba(0, 0, 67, 0.477);
+  border-radius: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  transition: 1s;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /*centralizando verticalmente e horizontalmente em relação ao pai*/
+}
+
+.input-form {
+  width: 60%;
+  background: rgba(0, 0, 67, 0.477);
+  border: none;
+  outline: none;
+  padding: 10px 20px;
+  border-radius: 35px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  font-size: 16px;
+  letter-spacing: 1px;
+  color: #fff;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  margin-left: 3.5rem;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.input-form:first-child {
+  margin-top: 4rem;
+}
+
+.input-form:not(:first-child) {
+  margin-top: 1.5rem;
+}
+
+.btn {
+  background: #fff;
+  color: rgb(0, 0, 67);
+  max-width: 100px;
+  cursor: pointer;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
