--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,30 @@
 
 /* #region: whole file */
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   background-color: rgb(247, 247, 247);
+}
+
+:root {
+  --orange-main: rgb(255, 69, 0);
+  --light-orange: rgb(253, 140, 41);
+  --blue-main: rgb(0, 0, 67);
+  --brand-light: rgb(231, 231, 231);
+  --brand-dark: rgb(0, 0, 0);
+  --light-gray: rgb(157, 157, 157);
+  --brand-orange: rgb(251, 80, 37);
+  --light-blue: rgb(12, 12, 158);
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background-color: var(--brand-light);
   font-family: "Mooli", sans-serif;
 }
 
@@ -18,7 +41,7 @@
 }
 
 .headertext {
-  color: rgb(251, 80, 37);
+  color: var(--orange-main);
   font-size: 30px;
 }
 
@@ -30,27 +53,27 @@ button {
 }
 
 .login {
-  background-color: white;
-  color: black;
-  border-color: black;
+  background-color: var(--brand-light);
+  color: var(--brand-dark);
+  border: var(--brand-dark);
 }
 
 .register,
 .tracking {
-  background-color: rgb(251, 80, 37);
-  color: white;
+  background-color: var(--orange-main);
+  color: var(--brand-light);
   border: none;
 }
 
 .login:hover {
-  background-color: rgb(231, 231, 231);
+  background-color: var(--brand-light);
   transform: scale(1.03);
   cursor: pointer;
 }
 
 .register:hover,
 .tracking:hover {
-  background-color: rgb(253, 140, 41);
+  background-color: var(--light-orange);
   transform: scale(1.03);
   cursor: pointer;
 }
@@ -63,7 +86,7 @@ button {
 }
 
 .menuh:hover {
-  color: rgb(157, 157, 157);
+  color: var(--light-gray);
   cursor: pointer;
 }
 
@@ -95,13 +118,13 @@ button {
 }*/
 
 .subheadline {
-  color: gray;
+  color: var(--light-gray);
   font-size: 20px;
   line-height: 30px;
 }
 
 .headline span {
-  color: rgb(251, 80, 37);
+  color: var(--brand-orange);
 }
 /* #endregion */
 
@@ -114,11 +137,7 @@ button {
   justify-content: center;
 }
 
-input[type="register"],
-input[type="origin"],
-input[type="destination"],
-input[type="weight"] {
-  padding: 10px;
+input {  padding: 10px;
   margin: 10px 0;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -127,31 +146,31 @@ input[type="weight"] {
 
 .srazul {
   font-size: 15px;
-  background-color: rgb(0, 0, 67);
+  background-color: var(--blue-main);
 }
 
 .srlar {
   font-size: 15px;
-  background-color: orangered;
+  background-color: var(--orange-main);
 }
 
 .laranja {
-  background-color: orangered;
-  color: white;
+  background-color: var(--orange-main);
+  color: var(--brand-light);
   padding: 20px;
   border-radius: 0 20px 20px 0;
 }
 
 .azul {
-  background-color: rgb(0, 0, 67);
+  background-color: var(--blue-main);
   color: gainsboro;
   padding: 20px;
   border-radius: 20px 0 0 20px;
 }
 
 .check {
-  background-color: rgb(0, 0, 67);
-  color: white;
+  background-color: var(--blue-main);
+  color: var(--brand-light);
   border-radius: 12px;
   height: 40px;
   width: 90px;
@@ -160,7 +179,7 @@ input[type="weight"] {
 }
 
 .check:hover {
-  background-color: rgb(12, 12, 158);
+  background-color: var(--light-blue);
   transform: scale(1.03);
   cursor: pointer;
 }
