--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 /* #region: whole file */
 * {
-margin: 0;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: var(--brand-light2)
@@ -20,13 +20,14 @@ margin: 0;
   --light-blue: rgb(12, 12, 158);
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
 
 body {
-  background-color: var(--brand-light);
+  background-color: var(--brand-light2);
   font-family: "Mooli", sans-serif;
 }
 
@@ -50,7 +51,7 @@ body {
 button {
   border-radius: .75rem;
   height: 2.5rem;
-  width: 5.63;
+  width: 5.63rem;
   font-weight: bold;
 }
 
@@ -91,7 +92,7 @@ button {
   margin-right: 4.5rem;
   display: inline-block;
   transition: 0.3s;
-  text-decoration: none ;
+  text-decoration: none;
   color: black;
   font-weight: bold;
 }
@@ -145,58 +146,54 @@ button {
 
 /* #region: search-menu */
 .search-menu {
-  padding: 20px;
-  margin: 10px;
-  align-items: center;
   display: flex;
   justify-content: center;
+  /* padding: 20px; */
+  /* margin: 10px; */
+  /* align-items: center; */
 }
 
-input {  padding: 10px;
-  margin: 10px 0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.srazul {
-  font-size: 15px;
-  background-color: var(--blue-main);
-}
-
-.srlar {
-  font-size: 15px;
-  background-color: var(--orange-main);
-}
-
-.laranja {
-  background-color: var(--orange-main);
-  color: var(--brand-light);
-  padding: 20px;
-  border-radius: 0 20px 20px 0;
-}
-
-.azul {
+.left-side {
   background-color: var(--blue-main);
   color: gainsboro;
   padding: 20px;
   border-radius: 20px 0 0 20px;
 }
 
+.menu-heading {
+  font-size: 20px;
+  background-color: transparent;
+}
+
+.menuInput {
+  /* padding: 10px; */
+  /* margin: 10px 0; */
+  /* border: 1px solid #ccc; */
+  /* border-radius: 4px; */
+  /* cursor: pointer; */
+}
+
+.right-side {
+  /* background-color: var(--orange-main); */
+  /* color: var(--brand-light); */
+  /* padding: 20px; */
+  /* border-radius: 0 20px 20px 0; */
+}
+
 .check {
-  background-color: var(--blue-main);
-  color: var(--brand-light);
-  border-radius: 12px;
-  height: 40px;
-  width: 90px;
-  font-weight: bold;
-  border: none;
+  /* background-color: var(--blue-main); */
+  /* color: var(--brand-light); */
+  /* border-radius: 12px; */
+  /* height: 40px; */
+  /* width: 90px; */
+  /* font-weight: bold; */
+  /* border: none; */
 }
 
 .check:hover {
-  background-color: var(--light-blue);
-  transform: scale(1.03);
-  cursor: pointer;
+  /* background-color: var(--light-blue); */
+  /* transform: scale(1.03); */
+  /* cursor: pointer; */
 }
 
 /* #endregion */
@@ -244,10 +241,6 @@ input {  padding: 10px;
   margin-left: 3.5rem;
 }
 
-::placeholder {
-  color: #fff;
-}
-
 .input-form:first-child {
   margin-top: 4rem;
 }
@@ -267,8 +260,10 @@ input {  padding: 10px;
 
 input[type='text'],
 input[type='number'] {
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
+
+/* #endregion */
