--- a/src/index.css
+++ b/src/index.css
@@ -173,11 +173,11 @@ input[type="weight"] {
   display: none;
 }
 
-.form-container form {
+.form-container {
   width: 400px;
   min-height: 400px;
-  background: rgba(0, 0, 67, 0.477);
-  border-radius: 10px;
+  background:rgba(246, 244, 241, 0.74);
+  border-radius: 10px, 0.192;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -193,6 +193,19 @@ input[type="weight"] {
   /*centralizando verticalmente e horizontalmente em relação ao pai*/
 }
 
+.imgforms{
+  width: 100%;
+  right:60%;
+  left: 60%; 
+  border: none;
+ /* height: 50em; */
+  /* margin: 0%; */
+}
+.imgforms2{
+  width: 100%;
+  right:80%;
+  border: none;
+}
 .input-form {
   width: 60%;
   background: rgba(0, 0, 67, 0.477);
@@ -211,7 +224,7 @@ input[type="weight"] {
 }
 
 ::placeholder {
-  color: #fff;
+  color: black;
 }
 
 .input-form:first-child {
@@ -229,4 +242,14 @@ input[type="weight"] {
   cursor: pointer;
   margin-bottom: 20px;
   font-weight: 600;
+}
+.absolut{
+  position: absolute;
+  margin: 50px 0 0 0;
+background: none;
+
+}
+.absolut2{
+  position: absolute;
+  background: none;
 }
