--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;;
+  text-decoration: none;
+  ;
 }
 
 :root {
@@ -71,14 +72,14 @@ button {
 .login:hover {
   background-color: var(--brand-light);
   transform: scale(1.03);
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .register:hover,
 .tracking:hover {
   background-color: var(--light-orange);
   transform: scale(1.03);
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .menu ul {
@@ -173,7 +174,7 @@ button {
   flex: 1;
 }
 
-.input-group{
+.input-group {
   background-color: transparent;
   display: flex;
   align-items: baseline;
@@ -204,20 +205,33 @@ button {
   cursor: pointer;
 }
 
-#register{
+#register {
   width: 25rem;
 }
 
-#origin{
+#origin {
   max-width: 9rem;
 }
 
-#destination{
+#destination {
   max-width: 14rem;
 }
 
-#weight{
+#weight {
   max-width: 3rem;
+}
+
+.menuSubtitles {
+  color: var(--light-gray);
+  font-size: 0.9rem;
+  margin-top: 5px;
+  /* display: inline-block; */
+  /* vertical-align: middle; */
+  font-style: italic;
+}
+
+.white{
+  color: white;
 }
 
 /* #endregion */
@@ -231,7 +245,7 @@ button {
 .form-container {
   width: 400px;
   min-height: 400px;
-  background:rgba(246, 244, 241, 0.74);
+  background: rgba(246, 244, 241, 0.74);
   border-radius: 10px, 0.192;
   flex-direction: column;
   justify-content: center;
@@ -278,19 +292,21 @@ button {
   border: none;
 }
 
-.imgforms{
+.imgforms {
   width: 100%;
-  right:60%;
-  left: 60%; 
+  right: 60%;
+  left: 60%;
   border: none;
- /* height: 50em; */
+  /* height: 50em; */
   /* margin: 0%; */
 }
-.imgforms2{
+
+.imgforms2 {
   width: 100%;
-  right:80%;
+  right: 80%;
   border: none;
 }
+
 .input-form {
   width: 60%;
   background: rgba(0, 0, 67, 0.477);
@@ -328,7 +344,7 @@ button {
   font-weight: 600;
 }
 
-.absolut{
+.absolut {
   position: absolute;
   background: none;
 }
@@ -345,14 +361,15 @@ footer {
   justify-content: space-around;
 }
 
-.title-footer, .paragraph {
+.title-footer,
+.paragraph {
   color: var(--orange-main);
   text-align: left;
   padding: 1rem;
 }
 
 .paragraph {
-  color: var(--brand-light2 );
+  color: var(--brand-light2);
   line-height: 1.5rem;
 }
 
@@ -364,7 +381,4 @@ li {
   display: inline-block;
 }
 
-@media (max-width: 480px) {
-  
-}
-
+@media (max-width: 480px) {}
