--- a/src/index.css
+++ b/src/index.css
@@ -336,45 +336,70 @@ li {
 
 
 @media (max-width: 480px) {
-  
-  /* Estilo para o botão de abertura do menu */
-#openMenuButton {
-  display: block;
-  margin: 10px;
+
+  body {
+    width: 100%;
+    height: 100%;
+  }
+
+  .header {
+    display: block;
+  }
+
+  .menu {
+    padding-block: .8rem;
+  }
+
+  .buttons {
+    display: flex;
+    gap: 1rem;
+  }
+
+  .headertext {
+    text-align: center;
+  }
+
+.container {
+  flex-wrap: wrap;
 }
 
-/* Estilo para o menu móvel */
-#mobileMenu {
-  display: none;
-  background-color: #333;
-  color: #fff;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+.headline {
+font-size: 1.3rem;
+padding-inline: 2rem;
 }
 
-#mobileMenu ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+img {
+  width: 80%;
+}
+
+.search-menu {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
 }
 
-#mobileMenu li {
-  margin: 10px;
+.left-side {
+  border-radius: 20px 20px 0 0;
 }
 
-.hidden {
-  display: none;
+.right-side {
+  border-radius: 0 0 20px 20px;
 }
 
+#register, #origin, #destination, #weight {
+  max-width: fit-content;
+}
+
+.input-group {
+  flex-direction: column;
+}
+
+footer {
+  max-height: 5rem;
+}
+
+.paragraph {
+  visibility: hidden;
+}
 }
 
 
