--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Kanit:wght@600&family=Mooli&family=Quicksand:wght@700&family=Roboto:ital,wght@0,500;0,700;1,100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Kanit:wght@600&family=Mooli&family=Quicksand:wght@700&family=Roboto:ital,wght@0,500;0,700;1,100&display=swap");
 
 /* #region: whole file */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;;
+  text-decoration: none;
 }
 
 :root {
@@ -28,7 +28,7 @@ body {
 
 body {
   background-color: var(--brand-light2);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 /* #endregion */
@@ -49,7 +49,7 @@ body {
 }
 
 button {
-  border-radius: .75rem;
+  border-radius: 0.75rem;
   height: 2.5rem;
   width: 5.63rem;
   font-weight: bold;
@@ -59,7 +59,7 @@ button {
 .login {
   background-color: var(--brand-light2);
   color: var(--blue-main);
-  border: .1rem solid var(--blue-main);
+  border: 0.1rem solid var(--blue-main);
 }
 
 .register,
@@ -216,7 +216,7 @@ button {
   font-style: italic;
 }
 
-.white{
+.white {
   color: white;
 }
 
@@ -239,7 +239,7 @@ button {
   align-items: center;
   position: absolute;
   backdrop-filter: blur(5px);
-  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.413);
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   transition: 1s;
@@ -254,7 +254,7 @@ button {
   right: 60%;
   left: 60%;
   border: none;
-  }
+}
 
 .imgforms2 {
   width: 100%;
@@ -290,17 +290,35 @@ button {
 }
 
 .btn {
-  background: #fff;
+  background: var(--brand-light2);
   color: rgb(0, 0, 67);
+  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.284);
   max-width: 100px;
   cursor: pointer;
   margin-bottom: 20px;
   font-weight: 600;
 }
 
-.absolut{
+.btn:hover {
+  background: var(--blue-main);
+  color: var(--brand-light2);
+}
+
+.absolut {
   position: absolute;
   background: none;
+}
+
+.forget {
+  color: var(--blue-main);
+  margin-left: 3.5rem;
+  padding: 0.3rem;
+}
+
+.forget a {
+  color: var(--orange-main);
+  font-weight: 600;
+  text-decoration: none;
 }
 
 /*-------------- FOOTER ------------------*/
@@ -312,17 +330,19 @@ footer {
   display: flex;
   align-items: center;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
-.title-footer, .paragraph {
+.title-footer,
+.paragraph {
   color: var(--orange-main);
   text-align: left;
   padding: 1rem;
 }
 
-.paragraph {
-  color: var(--brand-light2 );
+.paragraph,
+.contact {
+  color: var(--brand-light2);
   line-height: 1.5rem;
 }
 
@@ -334,24 +354,20 @@ li {
   display: inline-block;
 }
 
-
 @media (max-width: 480px) {
-
-  body {
-    width: 100%;
-    height: 100%;
-  }
-
   .header {
     display: block;
+    margin: 0;
   }
 
   .menu {
-    padding-block: .8rem;
+    padding-block: 0.8rem;
   }
 
   .buttons {
+    min-width: 15rem;
     display: flex;
+    justify-content: center;
     gap: 1rem;
   }
 
@@ -359,47 +375,62 @@ li {
     text-align: center;
   }
 
-.container {
-  flex-wrap: wrap;
-}
+  .container {
+    flex-wrap: wrap;
+  }
 
-.headline {
-font-size: 1.3rem;
-padding-inline: 2rem;
-}
+  .headline {
+    font-size: 1.2rem;
+    padding-inline: 2rem;
+  }
 
-img {
-  width: 80%;
-}
+  .subheadline {
+    line-height: normal;
+  }
 
-.search-menu {
-  display: flex;
-  flex-direction: column;
-}
+  img {
+    width: 100%;
+  }
 
-.left-side {
-  border-radius: 20px 20px 0 0;
-}
+  .search-menu {
+    display: flex;
+    flex-direction: column;
+  }
 
-.right-side {
-  border-radius: 0 0 20px 20px;
-}
+  .left-side {
+    border-radius: 20px 20px 0 0;
+  }
 
-#register, #origin, #destination, #weight {
-  max-width: fit-content;
-}
+  .right-side {
+    border-radius: 0 0 20px 20px;
+  }
 
-.input-group {
-  flex-direction: column;
-}
+  .menu-heading {
+    text-align: center;
+  }
 
-footer {
-  max-height: 5rem;
-}
+  #register,
+  #origin,
+  #destination,
+  #weight {
+    max-width: fit-content;
+  }
 
-.paragraph {
-  visibility: hidden;
-}
-}
+  .input-group {
+    flex-direction: column;
+    align-items: center;
+  }
 
+  footer {
+    max-height: 5rem;
+    padding-inline: 2rem;
+  }
 
+  .paragraph {
+    visibility: hidden;
+  }
+
+  a .contact {
+    justify-content: center center;
+  }
+}
