nomes de classes e id alterados, todos para o formato camelCase

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
 /* #endregion */
 
 /* #region: header */
-.header {
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -42,7 +42,7 @@ body {
   margin-inline: 9rem;
 }
 
-.headertext {
+.headerText {
   color: var(--orange-main);
   font-size: 1.8rem;
   font-weight: bold;
@@ -92,7 +92,7 @@ button {
   font-weight: bold;
 }
 
-.menuh:hover {
+.menuItem:hover {
   color: var(--light-gray);
 }
 
@@ -129,7 +129,7 @@ button {
 /* #endregion */
 
 /* #region: search-menu */
-.search-menu {
+.searchMenu {
   display: flex;
   justify-content: center;
   align-items: stretch;
@@ -138,7 +138,7 @@ button {
   margin: 0 auto;
 }
 
-.left-side {
+.leftSide {
   background-color: var(--blue-main);
   color: var(--brand-light);
   padding: 1.25rem;
@@ -146,13 +146,13 @@ button {
   flex: 1;
 }
 
-.menu-heading {
+.menuHeading {
   font-size: 20px;
   background-color: transparent;
   color: var(--brand-light2);
 }
 
-.right-side {
+.rightSide {
   background-color: var(--orange-main);
   color: var(--brand-light);
   padding: 20px;
@@ -160,7 +160,7 @@ button {
   flex: 1;
 }
 
-.input-group {
+.inputGroup {
   background-color: transparent;
   display: flex;
   align-items: baseline;
@@ -208,16 +208,12 @@ button {
 }
 
 .menuSubtitles {
-  color: var(--light-gray);
+  color: var(--brand-light2);
   font-size: 0.9rem;
   margin-top: 5px;
   /* display: inline-block; */
   /* vertical-align: middle; */
   font-style: italic;
-}
-
-.white {
-  color: white;
 }
 
 /* #endregion */
@@ -229,7 +225,7 @@ button {
   display: none;
 }
 
-.form-container {
+.formContainer {
   width: 400px;
   min-height: 400px;
   background: rgba(246, 244, 241, 0.74);
@@ -249,20 +245,20 @@ button {
   /*centralizando verticalmente e horizontalmente em relação ao pai*/
 }
 
-.imgforms {
+.imgForm {
   width: 100%;
   right: 60%;
   left: 60%;
   border: none;
 }
 
-.imgforms2 {
+.imgForm2 {
   width: 100%;
   right: 80%;
   border: none;
 }
 
-.input-form {
+.inputForm {
   width: 60%;
   background: rgba(0, 0, 67, 0.477);
   border: none;
@@ -281,11 +277,11 @@ button {
   color: black;
 }
 
-.input-form:first-child {
+.inputForm:first-child {
   margin-top: 4rem;
 }
 
-.input-form:not(:first-child) {
+.inputForm:not(:first-child) {
   margin-top: 1.5rem;
 }
 
@@ -304,7 +300,7 @@ button {
   color: var(--brand-light2);
 }
 
-.absolut {
+.formBox {
   position: absolute;
   background: none;
 }
@@ -333,14 +329,14 @@ footer {
   justify-content: space-evenly;
 }
 
-.title-footer,
-.paragraph {
+.titleFooter,
+.reserved {
   color: var(--orange-main);
   text-align: left;
   padding: 1rem;
 }
 
-.paragraph,
+.reserved,
 .contact {
   color: var(--brand-light2);
   line-height: 1.5rem;
@@ -350,17 +346,17 @@ li {
   list-style-type: none;
 }
 
-.social-links {
+.socialLinks {
   display: inline-block;
 }
 
-.social-links ul{
+.socialLinks ul {
   display: flex;
   flex-direction: row;
 }
 
 @media (max-width: 480px) {
-  .header {
+  .navbar {
     display: block;
     margin: 0;
   }
@@ -369,19 +365,15 @@ li {
     padding-block: 0.8rem;
   }
 
-  .buttons {
+  .buttonsNav {
     min-width: 15rem;
     display: flex;
     justify-content: center;
     gap: 1rem;
   }
 
-  .headertext {
+  .headerText {
     text-align: center;
-  }
-
-  .container {
-    flex-wrap: wrap;
   }
 
   .headline {
@@ -393,24 +385,20 @@ li {
     line-height: normal;
   }
 
-  img {
-    width: 100%;
-  }
-
-  .search-menu {
+  .searchMenu {
     display: flex;
     flex-direction: column;
   }
 
-  .left-side {
+  .leftSide {
     border-radius: 20px 20px 0 0;
   }
 
-  .right-side {
+  .rightSide {
     border-radius: 0 0 20px 20px;
   }
 
-  .menu-heading {
+  .menuHeading {
     text-align: center;
   }
 
@@ -421,7 +409,7 @@ li {
     max-width: fit-content;
   }
 
-  .input-group {
+  .inputGroup {
     flex-direction: column;
     align-items: center;
   }
@@ -431,7 +419,7 @@ li {
     padding-inline: 2rem;
   }
 
-  .paragraph {
+  .reserved {
     visibility: hidden;
   }
 
